@startuml DataType
package DataType {
    class User {
    }

    class NormalUser {
    }
    class AdminUser {
    }

    class Order {
    }
    class FullOrder {
    }

    class Product {
    }
    class FullProduct {
    }

    class Coupon {
    }

    User <|-- NormalUser
    User <|-- AdminUser

    Order <|-- FullOrder

    Product <|-- FullProduct
}
@enduml
